<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">شهر افزار</string>
    <string name="title_activity_introduce">معرفی نرم افزار</string>
    <string name="retry">تلاش مجدد</string>
    <string name="internet_is_not_connect">خطا در ارتباط</string>
    <string name="enter_to_city_ware_app">ورود به برنامه شهر افزار</string>
    <string name="login_or_register_in_app">ورود یا ثبت نام در برنامه</string>
    <string name="to_exit_app_touch_back_again">برای خروج از برنامه دوباره دکمه بازگشت را لمس کنید</string>
    <string name="cellphone_format_is_not_correct">فرمت تلفن همراه وارد شده صحیح نمی باشد</string>
    <string name="email_format_is_not_correct">فرمت پست الکترونیکی وارد شده صحیح نمی باشد</string>
    <string name="website_format_is_not_correct">فرمت وب سایت وارد شده صحیح نمی باشد</string>
    <string name="tracking_code_format_is_not_correct">فرمت کد رهگیری وارد شده صحیح نمی باشد</string>
    <string name="postal_code_format_is_not_correct">فرمت کد پستی وارد شده صحیح نمی باشد</string>
    <string name="date_format_is_not_correct">فرمت تاریخ وارد شده صحیح نمی باشد</string>
    <string name="account_number_format_is_not_correct">فرمت شماره حساب وارد شده صحیح نمی باشد</string>
    <string name="time_format_is_not_correct">فرمت زمان وارد شده صحیح نمی باشد</string>
    <string name="phone_format_is_not_correct">فرمت تلفن وارد شده صحیح نمی باشد</string>
    <string name="value_is_not_integer">فرمت وارد شده عددی(بدون اعشار) نمی باشد</string>
    <string name="value_is_not_number">فرمت وارد شده عددی نمی باشد</string>
    <string name="percent_format_is_not_correct">فرمت درصد وارد شده صحیح نمی باشد</string>
    <string name="field_is_required">لطفا {0} را وارد نمایید</string>
    <string name="value">مقدار</string>
    <string name="login">ورود</string>
    <string name="register">ثبت نام</string>
    <string name="login_user">ورود کاربر</string>
    <string name="register_user">ثبت نام کاربر</string>
    <string name="cellphone">شماره تلفن همراه</string>
    <string name="please_enter_cellphone">لطفا شماره تلفن همراه را وارد نمایید</string>
    <string name="nickname">نام مستعار</string>
    <string name="please_enter_nickname">لطفا نام مستعار را وارد نمایید</string>
    <string name="name">نام</string>
    <string name="please_enter_name">لطفا نام را وارد نمایید</string>
    <string name="family">نام خانوادگی</string>
    <string name="please_enter_family">لطفا نام خانوادگی را وارد نمایید</string>
    <string name="confirm">تایید</string>
    <string name="re_send_message">ارسال مجدد پیام</string>
    <string name="tracking_code">کد رهگیری</string>
    <string name="please_enter_tracking_code">لطفا کد رهگیری را وارد نمایید</string>
    <string name="re_send_request_successful">درخواست مجدد با موفقیت ارسال شد</string>
    <string name="how_to_show_business_in_search" tools:ignore="TypographyEllipsis">تمایل دارید بنگاه های اقتصادی(مغازه، رستوران، دفتر شرکت، کارخانه و ...) بر اساس چه روشی به شما نمایش داده شود</string>
    <string name="select_your_search_type">انتخاب نحوه ی جستجو</string>
    <string name="show_business_base_on_gps">نمایش موارد با توجه به موقعیت جغرافیایی</string>
    <string name="show_business_base_on_region">نمایش موارد با توجه به منطقه انتخابی</string>
    <string name="TurnOnLocation" tools:ignore="TypographyEllipsis">با روشن کردن مکان یاب گوشی؛ بنگاه های اقتصادی(مغازه، رستوران، دفتر شرکت، کارخانه و ...) اطراف خود را هوشمندانه تر انتخاب کنید</string>
    <string name="ok">باشه</string>
    <string name="no">نه</string>
    <string name="not_now">فعلا نه</string>
    <string name="enable_gps">فعال نمودن مکان یاب</string>
    <string name="select_your_region">انتخاب منطقه جهت جستجو</string>
    <string name="confirm_your_region">تایید منطقه انتخابی</string>
    <string name="while_searching_sub_region_will_be_used">در زمان جستجو به صورت اتوماتیک زیر منطقه های منطقه انتخابی نیز لحاظ خواهد شد</string>
    <string name="back_to_parent">بازگشت به قبل</string>
    <string name="please_select_region">لطفا منطقه خود را انتخاب نمایید</string>
    <string name="please_select_business_category">لطفا صنف یا رسته خود را انتخاب نمایید</string>
    <string name="confirm_your_business_category">تایید صنف یا رسته انتخابی</string>
    <string name="select_your_business_category">انتخاب صنف یا رسته جهت جستجو</string>
    <string name="while_searching_sub_business_category_will_be_used">در زمان جستجو به صورت اتوماتیک زیر صنف یا رسته های، صنف یا رسته انتخابی نیز لحاظ خواهد شد</string>
    <string name="home">خانه</string>
    <string name="my_profile">پروفایل</string>
    <string name="search">جستجو</string>
    <string name="favourite">علاقمندی</string>
    <string name="commission">پورسانت</string>
    <string name="my_club">باشگاه</string>
    <string name="cart_iran">ایران کارت</string>
    <string name="more">بیشتر</string>
    <string name="sign_out">خروج از حساب کاربری</string>
    <string name="buy_package">خرید پکیج</string>
    <string name="buy_poster">خرید پوستر</string>
    <string name="factor_business">سفارشات دریافتی کسب و کار</string>
    <string name="notifications">پیام ها</string>
    <string name="setting">تنظیمات</string>
    <string name="favorite">علاقه مندی</string>
    <string name="basket">سبد خرید</string>
    <string name="factor">فاکتور خرید</string>
    <string name="business_menu_part">گزینه های بنگاه های اقتصادی</string>
    <string name="search_in_city_ware">جستجو در شهر افزار</string>
    <string name="primary_information">اطلاعات اولیه</string>
    <string name="save_information">ثبت اطلاعات</string>
    <string name="address">آدرس</string>
    <string name="extended_information">اطلاعات تکمیلی</string>
    <string name="create_date_address">تاریخ ایجاد: </string>
    <string name="postal_code">کد پستی</string>
    <string name="delete">حذف</string>
    <string name="edit_address">ویرایش</string>
    <string name="please_enter_address">آدرس خود را وارد کنید</string>
    <string name="please_enter_postal_code">کد پستی خود را وارد کنید</string>
    <string name="set_Address_on_map">ثبت و مشاهده آدرس بر روی نقشه</string>
    <string name="show_map_Address_on_map">نمایش آدرس بر روی نقشه</string>
    <string name="email">ایمیل</string>
    <string name="please_enter_email">لطفا ایمیل خود را وارد نمایید</string>
    <string name="sex">جنسیت</string>
    <string name="eye_color">رنگ چشم</string>
    <string name="favorite_color">رنگ مورد علاقه</string>
    <string name="skin_color">رنگ بدن</string>
    <string name="height">قد</string>
    <string name="weight">وزن</string>
    <string name="about_me">بیوگرافی</string>
    <string name="birth_date">تاریخ تولد</string>
    <string name="married_date">تاریخ ازدواج</string>
    <string name="account_number">شماره حساب</string>
    <string name="bank">بانک</string>
    <string name="degree_of_education">مدرک تحصیلی</string>
    <string name="website_address">آدرس وب سایت</string>
    <string name="favorite_food">غذای مورد علاقه</string>
    <string name="favorite_sweet">شیرینی مورد علاقه</string>
    <string name="favorite_city_to_travel">شهر مورد علاقه جهت مسافرت</string>
    <string name="favorite_brand">برند مورد علاقه</string>
    <string name="favorite_gift">هدیه مورد علاقه</string>
    <string name="job_or_business">کار یا حرفه</string>
    <string name="school_name">نام مدرسه</string>
    <string name="mother_birthDay">تاریخ تولد مادر</string>
    <string name="father_birthDay">تاریخ تولد پدر</string>
    <string name="spouse_birthDay">تاریخ تولد همسر</string>
    <string name="child_birthDay">تاریخ تولد بچه</string>
    <string name="favorite_football_team">تیم فوتبال مورد علاقه</string>
    <string name="telegram">تلگرام</string>
    <string name="instagram">اینستاگرام</string>
    <string name="please_enter_cm_height">لطفا قد خود را به سانتی متر وارد نمایید</string>
    <string name="please_enter_weight">لطفا وزن خود را وارد نمایید</string>
    <string name="please_enter_about_me">لطفا بیوگرافی خود را وارد نمایید</string>
    <string name="please_enter_account_number">لطفا شماره حساب خود را وارد نمایید</string>
    <string name="please_enter_bank_id">لطفا کد بانک خود را وارد نمایید</string>
    <string name="please_enter_website_address">لطفا آدرس وب سایت خود را وارد نمایید</string>
    <string name="please_enter_favorite_food">لطفا غذای مورد علاقه خود را وارد نمایید</string>
    <string name="please_enter_favorite_sweet">لطفا شیرینی مورد علاقه خود را وارد نمایید</string>
    <string name="please_enter_favorite_city_to_travel">لطفا شهر مورد علاقه جهت مسافرت خود را وارد نمایید</string>
    <string name="please_enter_favorite_brand">لطفا برند مورد علاقه خود را وارد نمایید</string>
    <string name="please_enter_favorite_gift">لطفا هدیه مورد علاقه خود را وارد نمایید</string>
    <string name="please_enter_job_or_business">لطفا کار یا حرفه خود را وارد نمایید</string>
    <string name="please_enter_school_name">لطفا نام مدرسه خود را وارد نمایید</string>
    <string name="please_enter_birth_date">لطفا تاریخ تولد خود را وارد نمایید</string>
    <string name="please_enter_married_date">لطفا تاریخ ازدواج خود را وارد نمایید</string>
    <string name="please_enter_mother_birthDay">لطفا تاریخ تولد مادر خود را وارد نمایید</string>
    <string name="please_enter_father_birthDay">لطفا تاریخ تولد پدر خود را وارد نمایید</string>
    <string name="please_enter_spouse_birthDay">لطفا تاریخ تولد همسر خود را وارد نمایید</string>
    <string name="please_enter_child_birthDay">لطفا تاریخ تولد بچه خود را وارد نمایید</string>
    <string name="please_enter_favorite_football_team">لطفا تیم فوتبال مورد علاقه خود را وارد نمایید</string>
    <string name="please_enter_telegram">لطفا تلگرام خود را وارد نمایید</string>
    <string name="please_enter_instagram">لطفا اینستاگرام خود را وارد نمایید</string>
    <string name="app_permission_denied">شما به برنامه مجوز مربوطه را نداده اید</string>
    <string name="for_register_address_turn_on_gps">لطفا برای ثبت آدرس مکان یاب را روشن نمایید، دقت نمایید که حالت "دقت بالا" برای مکان یاب فعال باشد.</string>
    <string name="turn_on_location_to_get_package_faster">با روشن کردن مکان یاب گوشی؛ ارسال سفارشات به محل درخواستی را سریع تر و ساده تر کنید</string>
    <string name="turn_on_location_show_business_inside">با روشن کردن مکان یاب گوشی؛ کسب و کارهای اطراف خود را مشاهده کنید.</string>
    <string name="to_use_map_turn_on_location">جهت استفاده از نقشه و سیستم مکان یابی لازم مکان یاب گوشی خود را روشن نمایید، دقت نمایید که حالت "دقت بالا" برای مکان یاب فعال باشد.</string>
    <string name="at_first_please_touch_some_where_to_select">لطفا موقعیت خود را بر روی نقشه نشانه گذاری کنید</string>
    <string name="back">بازگشت</string>
    <string name="none">هیچکدام</string>
    <string name="add_time_to_date">-23:59</string>
    <string name="job_title">نوع فعالیت</string>
    <string name="business_job_title">نوع فعالیت کسب و کار</string>
    <string name="business_is_open">باز است</string>
    <string name="business_has_delivery">پیک دارد</string>
    <string name="keyword">کلمات کلیدی</string>
    <string name="confirm_state">وضعیت تأیید</string>
    <string name="business">کسب و کار</string>
    <string name="region_name"> نام منطقه</string>
    <string name="category_name"> نام صنف یا رسته</string>
    <string name="business_title">عنوان کسب و کار</string>
    <string name="title">عنوان</string>
    <string name="count_of_employees">تعداد کارمندان</string>
    <string name="establishment">تاریخ تاسیس</string>
    <string name="business_description">توضیحات کسب و کار</string>
    <string name="business_product_commission">پورسانت محصولات(درصد)</string>
    <string name="product_commission">پورسانت محصول(درصد)</string>
    <string name="confirm_comment">توضیحات وضعیت تایید</string>
    <string name="region_select">انتخاب منطقه</string>
    <string name="category_select">انتخاب صنف</string>
    <string name="view_and_save_working_hours_per_week">مشاهده و ثبت ساعات کاری در هفته</string>
</resources>