<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ToolBar"
    android:padding="0dp"
    android:layout_margin="0dp"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/BackgroundThemeColor"
    android:theme="@style/AppTheme">

    <ImageView
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center"
        android:src="@drawable/logo" />

    <ImageButton
        android:id="@+id/SettingButtonToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:padding="12dp"
        android:contentDescription="@string/setting"
        android:background="@drawable/selector_image_button"
        android:src="@drawable/ic_setting_white" />
    <ImageButton
        android:id="@+id/NotificationButtonToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:padding="12dp"
        android:contentDescription="@string/notifications"
        android:background="@drawable/selector_image_button"
        android:src="@drawable/ic_notification_white" />

    <ImageButton
        android:id="@+id/FavoriteButtonToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:padding="12dp"
        android:contentDescription="@string/favorite"
        android:background="@drawable/selector_image_button"
        android:src="@drawable/ic_favorite_24dp" />
</android.support.v7.widget.Toolbar>