<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">


    <ir.rayas.app.citywareclient.Share.Layout.View.TextViewPersian
        android:id="@+id/DialogGPSTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:padding="16dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enable_gps" />

    <ImageView
        android:id="@+id/LogoGpsImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DialogGPSTitleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/dialog_gps_icon" />

    <ir.rayas.app.citywareclient.Share.Layout.View.TextViewPersian
        android:id="@+id/DialogGPSDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/DialogGPSTitleTextView"
        android:layout_alignRight="@+id/DialogGPSTitleTextView"
        android:layout_below="@+id/LogoGpsImageView"
        android:padding="16dp"
        android:gravity="right"
        android:text="@string/TurnOnLocation" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/DialogGPSDescriptionTextView"
        android:layout_margin="16dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <ir.rayas.app.citywareclient.Share.Layout.View.TextViewPersian
            android:id="@+id/DialogGPSCancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/not_now" />

        <ir.rayas.app.citywareclient.Share.Layout.View.TextViewPersian
            android:id="@+id/DialogGPSOkButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/ok"
            android:textColor="@color/FontThemeColor" />
    </LinearLayout>

</RelativeLayout>