<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ir.rayas.app.citywareclient.View.Fragment.LoginRegister.LoginFragment">
    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ir.rayas.app.citywareclient.Share.Layout.View.TextViewPersian
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="6dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/cellphone" />

        <ir.rayas.app.citywareclient.Share.Layout.View.EditTextPersian
            android:id="@+id/LoginCellPhoneEditText"
            app:ValidationType="CellPhoneNumber"
            app:IsRequired="true"
            app:Title="@string/cellphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_cellphone"
            android:layout_margin="6dp"
            android:inputType="phone"
            android:singleLine="true"
            android:maxLength="@integer/CellPhoneSize"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColorHint="@color/TextHintColor"
            android:imeOptions="actionDone"/>

        <ir.rayas.app.citywareclient.Share.Layout.View.ButtonPersianView
            android:id="@+id/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/selector_button_theme_style"
            android:text="@string/login"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/FontWhiteColor" />

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>
